--- a/ddblog/_config.yml
+++ b/ddblog/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "D&amp;D Blog"
 baseurl: "/ddblog"
-url: "http://griffinbrodman.com" 
+url: "http://griffinbrodman.com/ddblog" 
 
 markdown: kramdown
